# RkCamRtspServer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: live555.cmake
configs/: config.ini
inc/: CamRTSPServer.h  CamUnicastServerMediaSubsession.h  DeCompress.h  INIReader.h  RkEncoder.h  ini.h  transcoder.h
iqfiles/: ov13850_CMK-CT0116_default.json_2112x1568
scripts/: rkaiq_3A_2112x1568.sh  rkaiq_3A_4114x3136.sh
src/: CamRTSPServer.cc  CamUnicastServerMediaSubsession.cc  DeCompress.cc  INIReader.cc  RkEncoder.cc  ini.c  transcoder.cc
